--- a/.github/workflows/waka-readme-stats.yml
+++ b/.github/workflows/waka-readme-stats.yml
@@ -19,3 +19,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_PROJECTS: "False"
           SHOW_TIMEZONE: "False"
+          SHOW_LOC_CHART: "False"
